--- a/CA02 Folder/README
+++ b/CA02 Folder/README
@@ -1,6 +1,10 @@
 ---This repository hosts code dedicated to my eperience in ML 6070. The files need to be run in Python and are sourced from my Machine Learning class. Download the notebooks, open them on you preferred python program and then run all the code to see the outputs. I am currenly useing Jupyter Lab Notebook 3.3.2. Runtime should be about 4 seconds for the entire file, unless otherwise noted.
 
-CA02 - This partuclar code is focused on creating an email spam filter for 702 emails and measuring the accuracy of the model with two datasets, train-mails and test-mails, through Naive Bayes. The emails are already split between spam and non-spam messages and the model was tested with a 70/30 split for training and test data. This code takes approximately 80 seconds to run on python lab and yeilds an accuracy score of 1.0. Meaning that the model correctly predicted classiicaions 100% of the time.
+CA02 - This partuclar code is focused on creating an email spam filter for 702 emails and measuring the accuracy of the model with two datasets, train-mails and
+test-mails, through Naive Bayes. The emails are already split between spam and non-spam messages and the model was tested with a 70/30 split
+for training and test data. This code takes approximately 80 seconds to run on python lab and yeilds an accuracy score of 1.0. Meaning that the model 
+correctly predicted classiicaions 100% of the time.
+
 The training, test, and emails are locaed in the file data.zip, within my repository for reference. ---
 
 The libraries and source for the data are below:
