--- a/CA02 Folder/README
+++ b/CA02 Folder/README
@@ -1,4 +1,6 @@
----This repository hosts code dedicated to my eperience in ML 6070. The files need to be run in Python and are sourced from my Machine Learning class. Download the notebooks, open them on you preferred python program and then run all the code to see the outputs. I am currenly useing Jupyter Lab Notebook 3.3.2. Runtime should be about 4 seconds for the entire file, unless otherwise noted.
+---This repository hosts code dedicated to my eperience in ML 6070. The files need to be run in Python and are sourced from my Machine Learning class.
+Download the notebooks, open them on you preferred python program and then run all the code to see the outputs. I am currenly useing Jupyter Lab Notebook
+3.3.2. Runtime should be about 4 seconds for the entire file, unless otherwise noted.---
 
 CA02 - This partuclar code is focused on creating an email spam filter for 702 emails and measuring the accuracy of the model with two datasets, train-mails and
 test-mails, through Naive Bayes. The emails are already split between spam and non-spam messages and the model was tested with a 70/30 split
