--- a/CA02 Folder/README
+++ b/CA02 Folder/README
@@ -7,7 +7,7 @@ test-mails, through Naive Bayes. The emails are already split between spam and n
 for training and test data. This code takes approximately 80 seconds to run on python lab and yeilds an accuracy score of 1.0. Meaning that the model 
 correctly predicted classiicaions 100% of the time.
 
-The training, test, and emails are locaed in the file data.zip, within my repository for reference. ---
+The training, test, and emails are locaed in the file data.zip, within my repository for reference. 
 
 The libraries and source for the data are below:
 
